# Schack

./: .gitignore  Cargo.toml
src/: board.rs  game.rs  legal_moves.rs  main.rs  players.rs  ui.rs
src/AI/: make_data.py  make_raw_data.py  train_model.ipynb  train_model.py
src/AI/data/: data.txt  new_raw_data.txt  raw_data.txt
src/players/: bit_bot.rs  bit_bot_AI.rs  bot.rs  human.rs  random.rs
ui/: appwindow.slint
